--- a/app/src/main/res/layout/fragment_send.xml
+++ b/app/src/main/res/layout/fragment_send.xml
@@ -94,7 +94,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="8dp"
                 android:layout_weight="0.6"
-                android:background="@android:color/transparent"
+                android:background="@color/extra_light_gray"
                 android:ellipsize="middle"
                 android:ems="10"
                 android:hint="@string/Send.toLabel"
@@ -179,7 +179,7 @@
                 android:layout_marginStart="4dp"
                 android:layout_marginEnd="8dp"
                 android:layout_toEndOf="@id/iso_text"
-                android:background="@android:color/transparent"
+                android:background="@color/extra_light_gray"
                 android:clickable="false"
                 android:cursorVisible="false"
                 android:ems="10"
