--- a/app/src/main/res/layout/fragment_word_item.xml
+++ b/app/src/main/res/layout/fragment_word_item.xml
@@ -11,7 +11,7 @@
         android:layout_height="96dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:background="@drawable/rounded_phrase_word"
+        android:background="@drawable/signal_layout"
         android:clickable="false"
         android:focusable="false"
         android:gravity="center"
