--- a/app/src/main/res/layout/fragment_signal.xml
+++ b/app/src/main/res/layout/fragment_signal.xml
@@ -42,7 +42,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="32dp"
             android:layout_marginEnd="16dp"
-            android:src="@drawable/ic_check_mark_white" />
+            android:src="@drawable/white_eca" />
 
         <com.breadwallet.presenter.customviews.BaseTextView
             android:id="@+id/description"
