--- a/app/src/main/res/layout/transaction_details_item.xml
+++ b/app/src/main/res/layout/transaction_details_item.xml
@@ -49,17 +49,6 @@
                 android:textSize="@dimen/header"
                 app:brdFont="@string/Font.CircularPro_Bold" />
 
-            <ImageButton
-                android:id="@+id/faq_button"
-                android:layout_width="@dimen/faq_dimen"
-                android:layout_height="@dimen/faq_dimen"
-                android:layout_alignBottom="@+id/title"
-                android:layout_alignParentEnd="true"
-                android:layout_marginLeft="@dimen/bread_margin"
-                android:layout_marginEnd="@dimen/bread_margin"
-                android:layout_marginRight="@dimen/bread_margin"
-                android:background="@drawable/faq_question_black" />
-
             <View
                 android:id="@+id/view"
                 android:layout_width="match_parent"
@@ -150,7 +139,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:text="@string/Transaction.available"
-                    android:textColor="#48F0B8"
+                    android:textColor="#a618d7"
                     android:textIsSelectable="true"
                     app:brdFont="@string/Font.CircularPro_Bold" />
 
