--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -181,15 +181,15 @@
 
                 </android.support.v7.widget.Toolbar>
 
-                <!--<com.breadwallet.presenter.customviews.BRSearchBar xmlns:app="http://schemas.android.com/apk/res-auto"-->
-                    <!--android:id="@+id/search_bar"-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="160dp"-->
-                    <!--android:background="@drawable/bread_gradient"-->
-                    <!--android:contentInsetStart="0dp"-->
-                    <!--android:contentInsetLeft="0dp"-->
-                    <!--app:contentInsetLeft="0dp"-->
-                    <!--app:contentInsetStart="0dp" />-->
+                <com.breadwallet.presenter.customviews.BRSearchBar xmlns:app="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/search_bar"
+                    android:layout_width="match_parent"
+                    android:layout_height="160dp"
+                    android:background="@drawable/bread_gradient"
+                    android:contentInsetStart="0dp"
+                    android:contentInsetLeft="0dp"
+                    app:contentInsetLeft="0dp"
+                    app:contentInsetStart="0dp" />
 
                 <com.breadwallet.presenter.customviews.BRNotificationBar xmlns:app="http://schemas.android.com/apk/res-auto"
                     android:id="@+id/notification_bar"
