--- a/app/src/main/res/layout/pin_pad.xml
+++ b/app/src/main/res/layout/pin_pad.xml
@@ -17,7 +17,7 @@
         android:layout_row="0"
         android:padding="8dp"
         android:layout_rowWeight="1"
-        android:background="@color/numpad_entry"
+        android:background="@android:color/transparent"
         android:gravity="center"
         android:paddingBottom="8dp"
         android:text="1"
@@ -33,7 +33,7 @@
         android:layout_margin="2px"
         android:layout_row="0"
         android:layout_rowWeight="1"
-        android:background="@color/numpad_entry"
+        android:background="@android:color/transparent"
         android:gravity="center"
         android:paddingBottom="8dp"
         android:text="2"
@@ -49,7 +49,7 @@
         android:layout_margin="2px"
         android:layout_row="0"
         android:layout_rowWeight="1"
-        android:background="@color/numpad_entry"
+        android:background="@android:color/transparent"
         android:gravity="center"
         android:paddingBottom="8dp"
         android:text="3"
@@ -64,7 +64,7 @@
         android:layout_margin="2px"
         android:layout_row="1"
         android:layout_rowWeight="1"
-        android:background="@color/numpad_entry"
+        android:background="@android:color/transparent"
         android:gravity="center"
         android:paddingBottom="8dp"
         android:text="4"
@@ -79,7 +79,7 @@
         android:layout_margin="2px"
         android:layout_row="1"
         android:layout_rowWeight="1"
-        android:background="@color/numpad_entry"
+        android:background="@android:color/transparent"
         android:gravity="center"
         android:paddingBottom="8dp"
         android:text="5"
@@ -94,7 +94,7 @@
         android:layout_margin="2px"
         android:layout_row="1"
         android:layout_rowWeight="1"
-        android:background="@color/numpad_entry"
+        android:background="@android:color/transparent"
         android:gravity="center"
         android:paddingBottom="8dp"
         android:text="6"
@@ -109,7 +109,7 @@
         android:layout_margin="2px"
         android:layout_row="2"
         android:layout_rowWeight="1"
-        android:background="@color/numpad_entry"
+        android:background="@android:color/transparent"
         android:gravity="center"
         android:paddingBottom="8dp"
         android:text="7"
@@ -124,7 +124,7 @@
         android:layout_margin="2px"
         android:layout_row="2"
         android:layout_rowWeight="1"
-        android:background="@color/numpad_entry"
+        android:background="@android:color/transparent"
         android:gravity="center"
         android:paddingBottom="8dp"
         android:text="8"
@@ -139,7 +139,7 @@
         android:layout_margin="2px"
         android:layout_row="2"
         android:layout_rowWeight="1"
-        android:background="@color/numpad_entry"
+        android:background="@android:color/transparent"
         android:gravity="center"
         android:paddingBottom="8dp"
         android:text="9"
@@ -154,7 +154,7 @@
         android:layout_margin="2px"
         android:layout_row="3"
         android:layout_rowWeight="1"
-        android:background="@color/numpad_entry"
+        android:background="@android:color/transparent"
         android:gravity="center"
         android:paddingBottom="8dp"
         android:text="."
@@ -169,7 +169,7 @@
         android:layout_margin="2px"
         android:layout_row="3"
         android:layout_rowWeight="1"
-        android:background="@color/numpad_entry"
+        android:background="@android:color/transparent"
         android:gravity="center"
         android:paddingBottom="8dp"
         android:text="0"
@@ -185,7 +185,7 @@
         android:layout_gravity="fill_horizontal|fill_vertical"
         android:layout_margin="2px"
         android:layout_row="3"
-        android:background="@color/numpad_entry"
+        android:background="@android:color/transparent"
         android:gravity="center"
         android:paddingBottom="8dp"
         android:src="?attr/pin_pad_delete_src"
