--- a/app/src/main/res/layout/fragment_send.xml
+++ b/app/src/main/res/layout/fragment_send.xml
@@ -328,7 +328,7 @@
             android:id="@+id/separator2"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/numpad_entry" />
+            android:background="@color/extra_light_gray" />
 
         <LinearLayout
             android:id="@+id/keyboard_layout"
@@ -340,13 +340,13 @@
                 android:id="@+id/keyboard"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/numpad_entry" />
+                android:background="@color/extra_light_gray" />
 
             <View
                 android:id="@+id/separator3"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/numpad_entry" />
+                android:background="@color/extra_light_gray" />
         </LinearLayout>
 
         <LinearLayout
