back arrow Drawable changes

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -12,7 +12,7 @@
         android:id="@+id/back_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/backward3"
+        android:background="@drawable/ic_arrow_left"
         app:layout_constraintLeft_toLeftOf="@+id/divider4"
         app:layout_constraintTop_toTopOf="@id/title" />
 
