--- a/app/src/main/res/layout/activity_display_currency.xml
+++ b/app/src/main/res/layout/activity_display_currency.xml
@@ -13,7 +13,7 @@
         android:id="@+id/back_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/backward3"
+        android:background="@drawable/ic_arrow_left"
         app:layout_constraintStart_toStartOf="@id/buttons_layout"
         app:layout_constraintTop_toTopOf="@id/title" />
 
