--- a/app/src/main/res/layout/activity_advanced.xml
+++ b/app/src/main/res/layout/activity_advanced.xml
@@ -22,7 +22,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:background="@drawable/backward3" />
+                android:background="@drawable/ic_arrow_left" />
 
             <com.breadwallet.presenter.customviews.BaseTextView
                 android:id="@+id/title"
