--- a/app/src/main/res/layout/activity_fingerprint.xml
+++ b/app/src/main/res/layout/activity_fingerprint.xml
@@ -24,6 +24,13 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
+            <ImageButton
+                android:id="@+id/back_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/ic_arrow_left"
+                android:layout_marginTop="16dp"
+                android:layout_marginLeft="16dp"/>
 
             <com.breadwallet.presenter.customviews.BaseTextView
                 android:id="@+id/title"
