--- a/app/src/main/res/layout/activity_input_words.xml
+++ b/app/src/main/res/layout/activity_input_words.xml
@@ -6,6 +6,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageButton
+        android:id="@+id/back_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/ic_arrow_left"
+        app:layout_constraintLeft_toLeftOf="@+id/gridLayout"
+        app:layout_constraintTop_toTopOf="@id/title"/>
+
     <com.breadwallet.presenter.customviews.BaseTextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
