--- a/app/src/main/res/layout/activity_paper_key_prove.xml
+++ b/app/src/main/res/layout/activity_paper_key_prove.xml
@@ -20,6 +20,14 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <ImageButton
+            android:id="@+id/back_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_arrow_left"
+            app:layout_constraintLeft_toLeftOf="@+id/description"
+            app:layout_constraintTop_toTopOf="@id/title"/>
+
         <com.breadwallet.presenter.customviews.BaseTextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
