--- a/app/src/main/res/layout/activity_spend_limit.xml
+++ b/app/src/main/res/layout/activity_spend_limit.xml
@@ -7,12 +7,21 @@
     android:layout_height="match_parent"
     tools:context="com.breadwallet.presenter.activities.settings.SpendLimitActivity">
 
+    <ImageButton
+        android:id="@+id/back_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:background="@drawable/ic_arrow_left"
+        app:layout_constraintTop_toTopOf="@+id/title"
+        app:layout_constraintLeft_toLeftOf="@+id/description"/>
+
     <com.breadwallet.presenter.customviews.BaseTextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="20dp"
         android:maxWidth="290dp"
         android:text="@string/TouchIdSpendingLimit.title.android"
