--- a/app/src/main/res/layout/activity_display_currency.xml
+++ b/app/src/main/res/layout/activity_display_currency.xml
@@ -23,6 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginTop="32dp"
         android:text="@string/Settings.currency"
         android:textSize="@dimen/header"
