--- a/app/src/main/res/layout/fragment_send.xml
+++ b/app/src/main/res/layout/fragment_send.xml
@@ -80,7 +80,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="8dp"
                 android:layout_weight="0.6"
-                android:background="@color/extra_light_gray"
+                android:background="@color/currency_subheading_color"
                 android:ellipsize="middle"
                 android:ems="10"
                 android:hint="@string/Send.toLabel"
@@ -165,7 +165,7 @@
                 android:layout_marginStart="4dp"
                 android:layout_marginEnd="8dp"
                 android:layout_toEndOf="@id/iso_text"
-                android:background="@color/extra_light_gray"
+                android:background="@color/currency_subheading_color"
                 android:clickable="false"
                 android:cursorVisible="false"
                 android:ems="10"
