--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -62,7 +62,7 @@
                     android:layout_height="160dp"
                     android:layout_marginLeft="8dp"
                     android:layout_marginRight="8dp"
-                    android:background="@color/primary_background"
+                    android:background="@drawable/add_wallet_button"
                     android:clipChildren="false"
                     android:clipToPadding="false"
                     android:contentInsetStart="0dp"
@@ -279,14 +279,16 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_above="@+id/bottom_toolbar_layout1"
-            android:layout_below="@id/delisted_token_layout" />
+            android:layout_below="@id/delisted_token_layout" >
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/tx_list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:clipToPadding="false"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/tx_list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clipToPadding="false"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+
+        </android.support.design.widget.CoordinatorLayout>
 
 
 
