--- a/app/src/main/res/drawable/add_wallet_button.xml
+++ b/app/src/main/res/drawable/add_wallet_button.xml
@@ -1,9 +1,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners
-        android:radius="4dp"
+        android:radius="12dp"
         />
 
-    <solid android:color="?attr/secondary_background"/>
-    <stroke android:color="@color/dialog_button_positive" android:width="2px"/>
+    <solid android:color="?attr/primary_background"/>
+    <stroke android:color="@color/white" android:width="2px"/>
 </shape>
