--- a/app/src/main/res/drawable/add_wallet_button_dark.xml
+++ b/app/src/main/res/drawable/add_wallet_button_dark.xml
@@ -1,9 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <corners android:radius="4dp" />
-
-    <solid android:color="@color/button_add_wallet_background" />
+    <corners android:radius="12dp" />/>
     <stroke
         android:width="2px"
-        android:color="@color/button_add_wallet_text" />
+        android:color="@color/white" />
 </shape>
