--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -96,7 +96,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="$16,904.34 per BTC"
-                            android:textColor="@color/trans_white"
+                            android:textColor="@color/white"
                             android:textSize="@dimen/sub_header"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -107,11 +107,11 @@
                             android:id="@+id/balance_label"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginEnd="11dp"
-                            android:layout_marginBottom="54dp"
+                            android:layout_marginEnd="16dp"
+                            android:layout_marginBottom="60dp"
                             android:text="@string/Account.balance"
-                            android:textColor="@color/trans_white"
-                            android:textSize="14sp"
+                            android:textColor="@color/white"
+                            android:textSize="18sp"
                             android:visibility="visible"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
